--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -634,7 +634,7 @@ config HVC_XEN
 	  Xen virtual console device driver
 
 config VIRTIO_CONSOLE
-	bool "Virtio console"
+	tristate "Virtio console"
 	depends on VIRTIO
 	select HVC_DRIVER
 	help
